[project]
name = "ask-dbx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-agents>=0.15.0",
    "databricks-langchain>=0.2.0",
    "databricks-sdk>=0.43.0",
    "langgraph>=0.2.69",
    "mlflow>=2.20.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.7.1",
    "rich>=13.9.4",
    "unitycatalog-langchain[databricks]>=0.1.0",
    "databricks-connect==15.1.0",
]

[project.scripts]
hello = "ask_dbx:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
